# pipeline

./: CHANGELOG.md  cabal.project  flake.nix  hie.yaml  pipeline.cabal
src/: Pipeline.hs
